--- a/project_ux/views/project_task_views.xml
+++ b/project_ux/views/project_task_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <odoo>
 
-    <record id="view_task_form2" model="ir.ui.view">
+    <!-- <record id="view_task_form2" model="ir.ui.view">
         <field name="name">project.task2.inherit</field>
         <field name="model">project.task</field>
         <field name="inherit_id" ref="project.view_task_form2"/>
@@ -9,8 +9,12 @@
             <field name="tag_ids" position="after">
                 <field name="dont_send_stage_email" widget="boolean_toggle"/>
             </field>
+            <xpath expr="//field[@name='child_ids']" position="attributes">
+                <attribute name="widget">many2many</attribute>
+                <attribute name="domain">[('project_id', '=', project_id)]</attribute>
+            </xpath>
         </field>
-    </record>
+    </record> -->
 
     <record id="view_task_kanban_inherit" model="ir.ui.view">
         <field name="name">project.task.kanban.inherit</field>
