--- a/project_ux/views/project_task_views.xml
+++ b/project_ux/views/project_task_views.xml
@@ -46,14 +46,17 @@
     </record>
 
     <record id="project.act_project_project_2_project_task_all" model="ir.actions.act_window">
-        <field name="context">{
-            'default_project_id': active_id,
-            'show_project_update': True,
-            'search_default_is_task': 1,
-        }</field>
+        <field name="context">
+            {
+                'default_project_id': active_id,
+                'show_project_update': True,
+                'search_default_is_task': 1,
+            }
+        </field>
     </record>
 
-    <record id="project_task_view_form" model="ir.ui.view">
+    <!-- Enterprise-specific view removed -->
+    <!-- <record id="project_task_view_form" model="ir.ui.view">
         <field name="name">project.task.view.form</field>
         <field name="model">project.task</field>
         <field name="inherit_id" ref="project_enterprise.project_task_view_form"/>
@@ -65,5 +68,6 @@
                 <attribute name="attrs">{'invisible': []}</attribute>
             </xpath>
         </field>
-    </record>
+    </record> -->
+
 </odoo>
